test/parserTest/fail/test10.ic
class BadIf {
	void main () {
		if condition { //missing parentheses around condition
			Library.println("hi");
		}
	}
}